--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ section{
     height: 500px;
 }
 body{
-    font-family: 'Xanh Mono', monospace;
+    font-family: 'Montserrat', sans-serif;
     margin: 0;
 }
 h2{
@@ -10,8 +10,8 @@ h2{
     color: rgb(16, 105, 138);
 }
 h1{
-    font-family: 'Staatliches', cursive;
-    font-size: 40px;
+    font-family: 'Scada', sans-serif;
+    font-size: 60px;
     color: #fca903;
 }
 p{
@@ -52,7 +52,7 @@ p{
     color: #ffffff;
     font-size: 18px;
     font-weight: 700;
-    padding: 5px 15px;
+    padding: 13px 25px;
     font-display: inline-block;
     
 }
@@ -79,8 +79,8 @@ p{
 }
 .latest-work-projects{
     padding-top: 50px;
-    background-image: url("Images/latest-work-bg.png");
-    background-repeat: no-repeat;
+    padding-bottom: 150px;
+    background-color: rgb(224, 221, 221);
     
 }
 .project-heading1{
@@ -99,7 +99,7 @@ p{
     margin-left: 7%;
     padding-top: 2%;
     padding-left: 2%;
-    
+    background: white;
     
 }
 .project img{
@@ -112,3 +112,108 @@ p{
     font-size: 30px;
     color: rgb(9, 73, 156);
 }
+
+
+
+
+
+.work-bg{
+   background-image: url("Images/Group-33094-1.png");
+   background-repeat: no-repeat;
+   width: 65%;
+   height: 55%;
+   border-radius: 65px;
+   margin-left: 17%;
+   margin-top: 8%;
+   display: block;
+}
+
+#work-heading{
+    font-size: 60px;
+    font-weight: 4500px;
+    padding-left: 8%;
+    padding-top: 8%;
+    color: white;
+}
+
+.work-btn{
+    position: relative;
+    left: 75%;
+    bottom: 38%;
+    
+}
+
+.skills{
+    margin: 30px 0 30px 0;
+  }
+.skill-row {
+    width: 50%;
+    margin: 100px auto 100px auto;
+    text-align: left;
+  }
+
+  .giphy-1 {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+  }
+  .giphy-2 {
+    background-color: cyan;
+    border-radius: 50%;
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+  }
+  
+
+#skill-heading-1{
+    text-align: center;
+    font-size: 60px;
+    color: rgb(7, 124, 112);
+}
+#skill-heading-2{
+    padding-top: 30px;
+}
+
+#skill-para-1{
+    padding-bottom: 10px;
+    padding-right: 260px;
+}
+
+#skill-para-2{
+    padding-bottom: 10px;
+    padding-right: 400px;
+}
+
+.bottom-container {
+    
+    margin-top: 25%;
+    
+  }
+
+  #bottom-heading{
+      text-align: center;
+      color: rgb(170, 53, 32);
+  }
+
+  .bottom-container-icon{
+      margin-left: 45%;
+  }
+
+  .footer-link-1 img{
+    width: 60px;
+    height: 60px;
+}
+.footer-link-2 img{
+    width: 60px;
+    height: 60px;
+}
+
+  .footer-link-3 img{
+      width: 60px;
+      height: 60px;
+  }
+
+  .copyright{
+      text-align: center;
+  }
